--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+        <div class="container">
     <div id="clock"></div>
     <div id="controls">
         <label>
@@ -17,6 +18,7 @@
         </label>
 
     </div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
