--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-    <div id="clock"></div>
+    <div class="wrapper">
+        <span></span>
+        <div class="display">
+            <div id="clock"></div>
+        </div>
+        <span></span>
+    </div>
     <div id="controls">        
         <label>
             <input type="radio" name="format" value="24" checked> 24-hour
@@ -16,25 +23,18 @@
         <label>
             <input type="radio" name="format" value="12"> 12-hour
         </label>
-        <!-- alarm implementation -->
-        <br>
-        <div class="alarm">
-            <label>Alarm: </label>
-            <input type="time" name="alarm" id="alarmInput">
-            <button class="set-alarm-btn">Set Alarm</button>
-        </div>
     </div>
-
-    <!-- <div id="controls">
-        <label for="format">Time Format: </label>
-        <select name="format" id="formatOptions">
-            <optgroup label="Time Format">
-                <option value="24-hour">24-hour</option>
-                <option value="12-hour">12-hour</option>
-            </optgroup>
-        </select>
-    </div> -->
-    
+    <!-- alarm implementation -->
+    <div class="alarm">
+        <label>Alarm: </label>
+        <input type="time" id="alarm-input">
+        <button class="set-alarm-btn">Set Alarm</button>
+        <div class="alarm-controls">
+            <button class="stop-alarm hidden">Stop Alarm</button>
+            <button class="snooze hidden">Snooze</button>
+        </div>
+        <audio src="sound/alarm.mp3" id="alarm-audio" preload="auto"></audio>
+    </div>
 </div>
     <script src="script.js"></script>
 </body>
